--- a/lol-smite-practice/index.html
+++ b/lol-smite-practice/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no' />
     <meta charset='utf-8'>
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="manifest" href="./manifest.json">
     <style></style>
     <title>Smite Practice Tools for LoL</title>
-    <script src="playcanvas-stable.min.js"></script>
-    <script src="__settings__.js"></script>
+    <script src="./playcanvas-stable.min.js"></script>
+    <script src="./__settings__.js"></script>
 </head>
 <body>
-    <script src="__start__.js"></script>
-    <script src="__loading__.js"></script>
+    <script src="./__start__.js"></script>
+    <script src="./__loading__.js"></script>
     <script>
         if ("serviceWorker" in navigator) {
           navigator.serviceWorker
